<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNum1"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/hint_firstNum"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="32dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/tvStudentName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/hint_secondNum"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="8dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/etNum1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerOps"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:entries="@array/operations_array"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/etNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="32dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/spinnerOps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
